--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <title></title>
@@ -18,7 +18,9 @@
           <li><a href="contacts.html">Контакты</a></li>
         </ul>
         <ul class="user-navigation">
-          <li class="login-link">Вход</li>
+          <li>
+            <a class="login-link" href="login.html">Вход</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -26,8 +28,12 @@
       <h1 class="page-title">Cредства для ухода</h1>
 
       <ul class="breadcrumbs">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog.html">Магазин</a></li>
+        <li>
+          <a href="index.html">Главная</a>
+        </li>
+        <li>
+          <a href="catalog.html">Магазин</a>
+        </li>
         <li class="breadcrumbs-current">Средства для ухода</li>
       </ul>
       <section class="filters">
@@ -38,30 +44,33 @@
             <ul>
               <li class="filter-option">
                 <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox"
-                       name="baxter-of-california" checked>
-                Baxter of California
+                       name="baxter-of-california" id="filter-baxter-of-california" checked>
+                <label for="filter-baxter-of-california">Baxter of California</label>
               </li>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="mr-natty">
-                Mr Natty
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="mr-natty"
+                       id="filter-mr-natty">
+                <label for="filter-mr-natty">Mr Natty</label>
               </li>
               <li class="filter-option">
                 <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="suavecito"
-                       checked>
-                Suavecito
+                       id="filter-suavecito" checked>
+                <label for="filter-suavecito">Suavecito</label>
               </li>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="malin-goetz">
-                Malin+Goetz
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="malin-goetz"
+                       id="filter-malin-goetz">
+                <label for="filter-malin-goetz">Malin+Goetz</label>
               </li>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="murrays">
-                Murray’s
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="murrays"
+                       id="filter-murrays">
+                <label for="filter-murrays">Murray’s</label>
               </li>
               <li class="filter-option">
                 <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="american-crew"
-                       checked>
-                American Crew
+                       id="filter-american-crew" checked>
+                <label for="filter-american-crew">American Crew</label>
               </li>
             </ul>
           </fieldset>
@@ -70,18 +79,18 @@
             <ul>
               <li class="filter-option">
                 <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group"
-                       value="shaving">
-                Бритвенные принадлежности
+                       value="shaving" id="filter-shave">
+                <label for="filter-shave">Бритвенные принадлежности</label>
               </li>
               <li class="filter-option">
                 <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group"
-                       value="hair-care" checked>
-                Средства для ухода
+                       value="hair-care" id="filter-care" checked>
+                <label for="filter-care">Средства для ухода</label>
               </li>
               <li class="filter-option">
                 <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group"
-                       value="accessories">
-                Аксессуары
+                       value="accessories" id="filter-accessories">
+                <label for="filter-accessories">Аксессуары</label>
               </li>
             </ul>
           </fieldset>
@@ -93,104 +102,92 @@
         <h2 class="visually-hidden">Список средств для ухода</h2>
         <ul class="catalog-list">
           <li class="catalog-item">
-            <h3>
-              <a href="catalog-item.html">
+            <a href="catalog-item.html">
+              <h3>
                 <span class="catalog-category">Набор для путешествий</span>
                 <span class="catalog-item-title">«Baxter of California»</span>
-              </a>
-            </h3>
-            <p class="catalog-item-image">
-              <a href="catalog-item.html">
+              </h3>
+              <p class="catalog-item-image">
                 <img src="img/product-1.jpg" width="220" height="165"
                      alt="Набор для путешествий «Baxter of California»">
-              </a>
-            </p>
+              </p>
+            </a>
             <p class="catalog-item-price">
               <b>2 900 ₽</b>
               <a class="button" href="#">Купить</a>
             </p>
           </li>
           <li class="catalog-item">
-            <h3>
-              <a href="catalog-item.html">
+            <a href="catalog-item.html">
+              <h3>
                 <span class="catalog-category">Увлажняющий кондиционер</span>
                 <span class="catalog-item-title">«Baxter of California»</span>
-              </a>
-            </h3>
-            <p class="catalog-item-image">
-              <a href="catalog-item.html">
+              </h3>
+              <p class="catalog-item-image">
                 <img src="img/product-2.jpg" width="220" height="165"
                      alt="Увлажняющий кондиционер «Baxter of California»">
-              </a>
-            </p>
+              </p>
+            </a>
             <p class="catalog-item-price">
               <b>750 ₽</b>
               <a class="button" href="#">Купить</a>
             </p>
           </li>
           <li class="catalog-item">
-            <h3>
-              <a href="catalog-item.html">
+            <a href="catalog-item.html">
+              <h3>
                 <span class="catalog-category">Гель для волос</span>
                 <span class="catalog-item-title">«Suavecito»</span>
-              </a>
-            </h3>
-            <p class="catalog-item-image">
-              <a href="catalog-item.html">
+              </h3>
+              <p class="catalog-item-image">
                 <img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">
-              </a>
-            </p>
+              </p>
+            </a>
             <p class="catalog-item-price">
               <b>290 ₽</b>
               <a class="button" href="#">Купить</a>
             </p>
           </li>
           <li class="catalog-item">
-            <h3>
-              <a href="catalog-item.html">
+            <a href="catalog-item.html">
+              <h3>
                 <span class="catalog-category">Глина для укладки волос</span>
                 <span class="catalog-item-title">«American crew»</span>
-              </a>
-            </h3>
-            <p class="catalog-item-image">
-              <a href="catalog-item.html">
+              </h3>
+              <p class="catalog-item-image">
                 <img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос «American crew»">
-              </a>
-            </p>
+              </p>
+            </a>
             <p class="catalog-item-price">
               <b>500 ₽</b>
               <a class="button" href="#">Купить</a>
             </p>
           </li>
           <li class="catalog-item">
-            <h3>
-              <a href="catalog-item.html">
+            <a href="catalog-item.html">
+              <h3>
                 <span class="catalog-category">Гель для волос</span>
                 <span class="catalog-item-title">«American crew»</span>
-              </a>
-            </h3>
-            <p class="catalog-item-image">
-              <a href="catalog-item.html">
+              </h3>
+              <p class="catalog-item-image">
                 <img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос «American crew»">
-              </a>
-            </p>
+              </p>
+            </a>
             <p class="catalog-item-price">
               <b>300 ₽</b>
               <a class="button" href="#">Купить</a>
             </p>
           </li>
           <li class="catalog-item">
-            <h3>
-              <a href="catalog-item.html">
+            <a href="catalog-item.html">
+              <h3>
                 <span class="catalog-category">Набор для бритья</span>
                 <span class="catalog-item-title">«Baxter of California»</span>
-              </a>
-            </h3>
-            <p class="catalog-item-image">
-              <a href="catalog-item.html">
+              </h3>
+              <p class="catalog-item-image">
                 <img src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
-              </a>
-            </p>
+              </p>
+            </a>
             <p class="catalog-item-price">
               <b>3 900 ₽</b>
               <a class="button" href="#">Купить</a>
@@ -198,10 +195,18 @@
           </li>
         </ul>
         <ul class="pagination-list">
-          <li class="pagination-item"><a href="#">1</a></li>
-          <li class="pagination-item pagination-item-current"><a>2</a></li>
-          <li class="pagination-item"><a href="#">3</a></li>
-          <li class="pagination-item"><a href="#">4</a></li>
+          <li class="pagination-item">
+            <a href="#">1</a>
+          </li>
+          <li class="pagination-item pagination-item-current">
+            <a>2</a>
+          </li>
+          <li class="pagination-item">
+            <a href="#">3</a>
+          </li>
+          <li class="pagination-item">
+            <a href="#">4</a>
+          </li>
         </ul>
       </section>
     </main>
@@ -230,19 +235,24 @@
       <p>Введите свой логин и пароль.</p>
       <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
         <p>
-          <input class="login-icon-user" type="text" name="login" placeholder="Логин">
+          <label class="visually-hidden" for="user-login">Логин</label>
+          <input class="login-icon-user" id="user-login" type="text" name="login" placeholder="Логин">
         </p>
         <p>
-          <input class="login-icon-password" type="password" name="password" placeholder="Пароль">
+          <label class="visually-hidden" for="user-password">Пароль</label>
+          <input class="login-icon-password" id="user-password" type="password" name="password" placeholder="Пароль">
         </p>
         <p class="login-password-info">
-          <input type="checkbox" name="remember" class="visually-hidden">
-          Запомните меня
+          <label class="login-checkbox">
+            <input type="checkbox" name="remember" class="visually-hidden">
+            <span class="checkbox-indicator"></span>
+            Запомните меня
+          </label>
           <a class="restore" href="#">Я забыл пароль!</a>
         </p>
         <button class="button" type="submit">Войти</button>
       </form>
-      <span class="modal-close">x</span>
+      <button class="modal-close" type="button">Закрыть</button>
     </section>
   </body>
 </html>
