--- a/catalog.html
+++ b/catalog.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <meta charset="UTF-8">
+    <title>Барбершоп «Бородинский»</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
+
+  <body class="inner-page">
+
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo" href="index.html">
@@ -18,13 +23,13 @@
           <li><a href="contacts.html">Контакты</a></li>
         </ul>
         <ul class="user-navigation">
-          <li>
-            <a class="login-link" href="login.html">Вход</a>
-          </li>
+          <li><a class="login-link" href="login.html">Вход</a></li>
         </ul>
       </nav>
     </header>
+
     <main class="container">
+
       <h1 class="page-title">Cредства для ухода</h1>
 
       <ul class="breadcrumbs">
@@ -36,6 +41,7 @@
         </li>
         <li class="breadcrumbs-current">Средства для ухода</li>
       </ul>
+
       <section class="filters">
         <h2 class="visually-hidden">Фильтр товаров</h2>
         <form class="filter" method="get" action="https://echo.htmlacademy.ru">
@@ -43,33 +49,27 @@
             <legend>Производители:</legend>
             <ul>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox"
-                       name="baxter-of-california" id="filter-baxter-of-california" checked>
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="baxter-of-california" id="filter-baxter-of-california" checked>
                 <label for="filter-baxter-of-california">Baxter of California</label>
               </li>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="mr-natty"
-                       id="filter-mr-natty">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="mr-natty" id="filter-mr-natty">
                 <label for="filter-mr-natty">Mr Natty</label>
               </li>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="suavecito"
-                       id="filter-suavecito" checked>
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="suavecito" id="filter-suavecito" checked>
                 <label for="filter-suavecito">Suavecito</label>
               </li>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="malin-goetz"
-                       id="filter-malin-goetz">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="malin-goetz" id="filter-malin-goetz">
                 <label for="filter-malin-goetz">Malin+Goetz</label>
               </li>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="murrays"
-                       id="filter-murrays">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="murrays" id="filter-murrays">
                 <label for="filter-murrays">Murray’s</label>
               </li>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="american-crew"
-                       id="filter-american-crew" checked>
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="american-crew" id="filter-american-crew" checked>
                 <label for="filter-american-crew">American Crew</label>
               </li>
             </ul>
@@ -78,18 +78,15 @@
             <legend>Группы товаров:</legend>
             <ul>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group"
-                       value="shaving" id="filter-shave">
+                <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="shaving" id="filter-shave">
                 <label for="filter-shave">Бритвенные принадлежности</label>
               </li>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group"
-                       value="hair-care" id="filter-care" checked>
+                <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="hair-care" id="filter-care" checked>
                 <label for="filter-care">Средства для ухода</label>
               </li>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group"
-                       value="accessories" id="filter-accessories">
+                <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="accessories" id="filter-accessories">
                 <label for="filter-accessories">Аксессуары</label>
               </li>
             </ul>
@@ -108,8 +105,7 @@
                 <span class="catalog-item-title">«Baxter of California»</span>
               </h3>
               <p class="catalog-item-image">
-                <img src="img/product-1.jpg" width="220" height="165"
-                     alt="Набор для путешествий «Baxter of California»">
+                <img src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
               </p>
             </a>
             <p class="catalog-item-price">
@@ -124,8 +120,7 @@
                 <span class="catalog-item-title">«Baxter of California»</span>
               </h3>
               <p class="catalog-item-image">
-                <img src="img/product-2.jpg" width="220" height="165"
-                     alt="Увлажняющий кондиционер «Baxter of California»">
+                <img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
               </p>
             </a>
             <p class="catalog-item-price">
@@ -195,21 +190,15 @@
           </li>
         </ul>
         <ul class="pagination-list">
-          <li class="pagination-item">
-            <a href="#">1</a>
-          </li>
-          <li class="pagination-item pagination-item-current">
-            <a>2</a>
-          </li>
-          <li class="pagination-item">
-            <a href="#">3</a>
-          </li>
-          <li class="pagination-item">
-            <a href="#">4</a>
-          </li>
+          <li class="pagination-item"><a href="#">1</a></li>
+          <li class="pagination-item pagination-item-current"><a>2</a></li>
+          <li class="pagination-item"><a href="#">3</a></li>
+          <li class="pagination-item"><a href="#">4</a></li>
         </ul>
       </section>
+
     </main>
+
     <footer class="main-footer">
       <p class="footer-contacts">
         Барбершоп «Бородинский»<br>
@@ -254,5 +243,6 @@
       </form>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
+
   </body>
 </html>
